<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/Home"
        />

    <item
        android:id="@+id/timer"
        android:icon="@drawable/ic_timer"
        android:title="@string/Timer"
        />

    <item
        android:id="@+id/workout"
        android:icon="@drawable/ic_workout"
        android:title="@string/Workout"
        />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/Profile"
        />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/Settings"
        />



</menu>