<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background">

    <RelativeLayout
        android:id="@+id/relLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relLayoutTopBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </android.support.design.widget.AppBarLayout>


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relLayoutMiddle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/relLayoutBotBar"
            android:layout_below="@+id/relLayoutTopBar">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="3dp"
                android:text="@string/ChooseWorkout"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/lay1"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:layout_weight="1"
                    android:text="@string/MuscleBuildning" />

                <Button
                    android:id="@+id/buttonFL"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="58dp"
                    android:layout_weight="1"
                    android:text="@string/FatLoss" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay2"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_below="@+id/lay1"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="95dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonFB"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:layout_weight="1"
                    android:text="@string/FullBody" />

                <Button
                    android:id="@+id/buttonBeg"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:layout_weight="1"
                    android:text="@string/Beginner" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay3"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_below="@+id/lay2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="178dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonAH"
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:layout_alignStart="@+id/lay3"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:layout_weight="1"
                    android:text="@string/AtHome" />


            </LinearLayout>


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relLayoutBotBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true">

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottomNavView_Bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:background="@drawable/border_top"
                app:labelVisibilityMode="labeled"
                app:menu="@menu/bottom_navigation_menu">


            </android.support.design.widget.BottomNavigationView>


        </RelativeLayout>


    </RelativeLayout>












</android.support.design.widget.CoordinatorLayout>